--- a/lambregs_ximera/ae_theorema.tex
+++ b/lambregs_ximera/ae_theorema.tex
@@ -88,14 +88,15 @@
 	\end{eqnarray*}
 	\phantom{}\hfill$\blacksquare$
 	
-	\voorbeeld{Opgave arbeid-energie theorema}{\textsf{ Een horizontaal liggende veer op tafel heeft een veerconstante $k=360\rm\,N/m$ en wordt $11,0\rm\,cm$ ingedrukt. Een blok van $1,85\rm\,kg$ wordt tegen de gespannen veer gelegd en losgelaten. De wrijvingsco\"effici\"ent tussen het blok en de tafel is $0,38$.
+	\begin{exercise}(arbeid-energie theorema)
+	Een horizontaal liggende veer op tafel heeft een veerconstante $k=360\rm\,N/m$ en wordt $11,0\rm\,cm$ ingedrukt. Een blok van $1,85\rm\,kg$ wordt tegen de gespannen veer gelegd en losgelaten. De wrijvingsco\"effici\"ent tussen het blok en de tafel is $0,38$.
 	\begin{enumerate}
 	\item Hoeveel arbeid levert de veerkracht vanaf de ingedrukte toestand tot in zijn evenwichtstoestand?
 	\item Hoeveel arbeid levert de wrijvingskracht over hetzelfde traject?
 	\item Hoe groot is de nettoarbeid?
 	\item Welke snelheid heeft het blok wanneer het zich, in de evenwichtstoestand, van de veer losmaakt?
 	\end{enumerate}
-	}}
+	\end{exercise}
 	
 	%%%\newpage
 	
