--- a/lambregs_ximera/knmtc_1dim_verticale_worp.tex
+++ b/lambregs_ximera/knmtc_1dim_verticale_worp.tex
@@ -25,15 +25,16 @@
 	%%\newpage
 	
 	
-	\begin{enumerate}
-	\item[\textbf{Opgave}]\textsf{Van de boord van een schip valt een loden bol in het water. De \mbox{boord} bevindt zich $4,0\rm\,m$ boven het wateroppervlak. De loden bol zinkt vervolgens met de snelheid waarmee hij het water raakte. Er zijn $6,0\rm\,s$ tussen het tijdstip waarop de bol valt en ze de bodem van het water bereikt.
-	\begin{enumerate}
-	\item Hoe diep is het water?
-	\item Wat is de gemiddelde snelheid van de bol over het hele traject?
-	\end{enumerate}
-	\item[\textit{gegeven}]$x_1=4,0\rm\,m$%%%\newline$t_2=6,0\rm\,s$
-	\item[\textit{gevraagd}]$x_2-x_1$, $\overline{v}_{02}$
-	\item[\textit{oplossing}]De beweging is opgebouwd uit twee verschillende soorten bewegingen. Het eerste stuk is een vrije val, wat een EVRB is. In het tweede stuk (onder water) is de snelheid constant en is er dus geen versnelling. In geen geval kunnen we dus de formules voor een EVRB op het geheel toepassen. Die zijn immers afgeleid voor een beweging waar de versnelling (altijd, gedurende de hele beweging) constant is.
+	\begin{exercise}
+	\begin{question} Van de boord van een schip valt een loden bol in het water. De \mbox{boord} bevindt zich $4,0\rm\,m$ boven het wateroppervlak. De loden bol zinkt vervolgens met de snelheid waarmee hij het water raakte. Er zijn $6,0\rm\,s$ tussen het tijdstip waarop de bol valt en ze de bodem van het water bereikt. \end{question}
+	\begin{question} Hoe diep is het water? \end{question}
+	\begin{question} Wat is de gemiddelde snelheid van de bol over het hele traject? \end{question}
+	
+	\begin{oplossing}
+	% \textit{gegeven} $x_1=4,0\rm\,m$ \\%%%\newline$t_2=6,0\rm\,s$ \\
+	% \textit{gevraagd} $x_2-x_1$, $\overline{v}_{02}$ \\
+	% \textit{oplossing} 
+	De beweging is opgebouwd uit twee verschillende soorten bewegingen. Het eerste stuk is een vrije val, wat een EVRB is. In het tweede stuk (onder water) is de snelheid constant en is er dus geen versnelling. In geen geval kunnen we dus de formules voor een EVRB op het geheel toepassen. Die zijn immers afgeleid voor een beweging waar de versnelling (altijd, gedurende de hele beweging) constant is. \\
 	\begin{image}
 	\includegraphics[width=0.4\textwidth]{boordschip}
 	\end{image}
@@ -59,8 +60,9 @@
 	\overline{v}_{02}=\frac{\Delta x}{\Delta t}=\frac{x_2}{t_2}&=&\frac{\sqrt{2gx_1}t_2-x_1}{t_2}\\
 	&=&\sqrt{2gx_1}-\frac{x_1}{t_2}\\
 	&=&8,2\rm\,m/s
-	\end{eqnarray*}}
-	\end{enumerate}
+	\end{eqnarray*}
+	\end{oplossing}
+	\end{exercise}
 	
 
 \end{document}
