--- a/lambregs_ximera/nwtn_oplossingsstrategie.tex
+++ b/lambregs_ximera/nwtn_oplossingsstrategie.tex
@@ -35,17 +35,20 @@
 	
 	%%\newpage
 	
-	\voorbeeld{}{\textsf{
-	\begin{enumerate}
-	\item[Opgave] Twee massa's $m_1$ en $m_2$ zijn via een touwtje en een katrol van te verwaarlozen massa met elkaar verbonden zoals in de figuur. Er is geen wrijving aanwezig. De massa's hebben een versnelling zoals aangegeven.
+	% \voorbeeld{}{\textsf{
+	\begin{exercise}
+	Twee massa's $m_1$ en $m_2$ zijn via een touwtje en een katrol van te verwaarlozen massa met elkaar verbonden zoals in de figuur. Er is geen wrijving aanwezig. De massa's hebben een versnelling zoals aangegeven.
 	%%%\newline
 	Bepaal de grootte van de versnelling van beide massa's en de grootte van de spankracht in het touw.
 	\begin{image}
 	\includegraphics[width=0.45\textwidth, angle=0]{blokken_helling_opl}
 	\end{image}
-	\item[gegeven]$m_1,~m_2,~\varphi$
-	\item [gevraagd]$a$, $F_s$
-	\item [oplossing]De tweede wet van Newton toepassen op $m_1$ levert
+
+	\begin{oplossing}
+	% \item[gegeven]$m_1,~m_2,~\varphi$
+	% \item [gevraagd]$a$, $F_s$
+	% \item [oplossing]
+	De tweede wet van Newton toepassen op $m_1$ levert
 	\begin{eqnarray}
 	F_s-m_1g&=&m_1a\nonumber\\
 	&\Updownarrow&\nonumber\\
@@ -67,8 +70,9 @@
 	\begin{eqnarray}
 	F_s&=&\frac{m_1m_2g(1+\sin{\varphi})}{m_1+m_2}\nonumber
 	\end{eqnarray}
-	\end{enumerate}
-	}}
+	\end{oplossing}
+	\end{exercise}
+	% }}
 	
 	
 	%%\newpage
