--- a/lambregs_ximera/knmtc_1dim_ERB.tex
+++ b/lambregs_ximera/knmtc_1dim_ERB.tex
@@ -20,14 +20,15 @@
 	\end{eqnarray*}
 	Samengevat:
 	
+	
 	\kader{
 	%\vspace{3mm}
 	De plaatsfunctie $x(t)$ van een ERB met snelheid $v$ is gegeven door:
-	\begin{eqnarray}\label{x(t)ERB}
+	\begin{eqnarray}%\label{x(t)ERB}
 	x(t)&=&x_0+v(t-t_0)
 	\end{eqnarray}
 	waarbij $x_0=x(t_0)$ de co\"ordinaat op het tijdstip $t_0$ is. Indien $t_0=0$ dan vereenvoudigt de plaatsfunctie (\ref{x(t)ERB}) tot
-	\begin{eqnarray}\label{x(t)ERB0}
+	\begin{eqnarray}%\label{x(t)ERB0}
 	x(t)&=&x_0+vt
 	\end{eqnarray}
 	%\vspace{0mm}
