--- a/lambregs_ximera/nwtn_traagheid.tex
+++ b/lambregs_ximera/nwtn_traagheid.tex
@@ -26,12 +26,13 @@
 	
 	De figuur ademt de onvermijdelijke wet van de traagheid uit \ldots
 	%%%\newline
-	\kader{
-	\vspace{1mm}
+	\begin{definition}
 	{\textbf{De wet van de traagheid}}
 	
 	Een voorwerp behoudt zijn toestand van rust of van eenparige rechtlijnige beweging, tenzij er een resulterende kracht op werkt.
-	\vspace{3mm}}
+	\end{definition}
+	
+	
 	
 	Je zal zeggen dat je met die wet al vertrouwd bent. Maar zoals zo vaak, blijken we zonder het te beseffen niet zomaar alle consequenties in rekening te brengen. Onze ervaring uit het dagelijks leven
 	wil wel eens roet in het eten strooien. Zo zijn we vertrouwd met het feit dat
@@ -41,7 +42,6 @@
 	
 	Laten we -- om deze misvatting te bestrijden -- een gedachte-experiment uitvoeren. We doen dus niks concreets -- enkel redeneren. Het is een gedachte-experiment van Galileo Galilei (1564-1642). Om het uit te voeren hebben we een speciale knikkerbaan nodig, eentje zonder wrijving.\footnote{Ik heb horen zeggen dat er lang geleden een klein winkeltje bestond dat dergelijke knikkerbanen verkocht. Doorheen de jaren is het adres echter verloren gegaan. Niemand weet meer waar het zich bevindt \ldots} Laten we ervan uitgaan dat we in het bezit zijn van zo'n uiterst zeldzame baan. Onderstaande figuur toont dan de situatie waarin we een knikker op een bepaalde hoogte aan de linkerkant loslaten. Omdat er geen wrijving is, zal -- omwille van behoud van energie -- de knikker op de andere helling tot eenzelfde hoogte rollen, daar momentaan stilvallen en vervolgens terugrollen.
 	\begin{image}
-	
 	\includegraphics[width=.7\textwidth]{Afbeelding1}
 	%\captionof{figure}{Het knikkertje rolt tot op dezelfde hoogte}
 	\label{Afbeelding1}
@@ -49,13 +49,11 @@
 	
 	Als we vervolgens de rechterhelling vlakker maken, zoals in onderstaande figuur, zal ons knikkertje ook nu tot dezelfde hoogte rollen. En dit ongeacht de grotere afstand. De energie-inhoud moet immers gelijk blijven.
 	\begin{image}
-	
 	\includegraphics[width=.7\textwidth]{Afbeelding2}
 	\end{image}
 	
 	Als laatste stap in onze redenering, misleiden we ons knikkertje\footnote{Mag dat wel?}. Het knikkertje moet -- zo hebben we het hem verteld -- een tijdje horizontaal rollen om pas dan de rechterhelling te kunnen oprollen. Opnieuw tot dezelfde hoogte. Nu hebben we echter de rechterhelling oneindig ver weg gezet! Ons arm knikkertje zal dus blijven rollen (herinner u, er was geen wrijving) in de veronderstelling de helling ooit te zullen tegenkomen. 
 	\begin{image}
-	
 	\includegraphics[width=.7\textwidth]{Afbeelding3}
 	\end{image}
 	Gedurende het rollen op het horizontale stuk is de knikker dus niet onderhevig aan een voorwaartse kracht!\footnote{Wie zou immers die kracht uitoefenen \ldots?!} De beweging moet niet worden `onderhouden'. 
@@ -65,16 +63,15 @@
 	De tendens van lichamen om zich te verzetten tegen de verandering van beweging, noemen we \textit{inertie} of \textit{traagheid}. Hoe groter de massa, hoe meer een voorwerp zich verzet.
 	
 	\begin{image}
-	
 	\includegraphics[width=0.8\textwidth]{Garfield_firstlaw}
 	\end{image}
 	
-	\voorbeeld{}{\textsf{
+	\begin{example}
 	Wanneer je met de fiets fietst, rechtdoor en met een constante snelheid, is de kracht die je voorwaarts uitoefent dan groter, kleiner of gelijk aan de weerstandskracht die achterwaarts is gericht? Is met andere woorden de resulterende kracht op jouw fiets naar voren gericht, nul of naar achteren gericht? 
 	%%%\newline
 	%%%\newline Het antwoord is dat de resulterende kracht is nul is! Moest er immers een resulterende kracht zijn, dan zou volgens de wet van de traagheid de toestand van eenparige rechtlijnige beweging niet kunnen worden behouden. 
 	Eenmaal in beweging, is er geen kracht meer nodig om de beweging te onderhouden. Je moet blijven trappen om een even grote kracht als de weerstandskracht te kunnen genereren. Natuurlijk, om in beweging te komen, heb je wel een netto kracht naar voor toe nodig. Bij het remmen is de resulterende kracht dan weer naar achteren gericht.
-	}}
+	\end{example}
 	
 	%\vfill
 	
