--- a/lambregs_ximera/nwtn_tweede_beginsel.tex
+++ b/lambregs_ximera/nwtn_tweede_beginsel.tex
@@ -5,11 +5,11 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Het tweede beginsel van Newtorn}{}
+	\xmtitle{Het tweede beginsel van Newton}{}
     \xmsource
 
 
-	\section{Het tweede beginsel van Newton}
+	% \section{Het tweede beginsel van Newton}
 
 	De eerste wet vertelt ons niet volledig wat er gebeurt wanneer op een lichaam een kracht werkt. Ze vertelt ons niet wat de relatie tussen kracht en beweging is. Uit onze dagelijkse ervaring zou je kunnen concluderen dat de snelheid van een voorwerp recht evenredig is met de erop uitgeoefende kracht. Hoe harder je immers op de pedalen duwt, hoe harder je gaat. De eerste wet vertelde ons echter al dat dit niet opgaat. 
 	
@@ -29,8 +29,7 @@
 	%\end{eqnarray*}
 	Aangezien we met het fundament van de mechanica te maken hebben, kunnen we de eenheid van kracht zodanig kiezen dat de evenredigheidsconstante simpelweg 1 is. We defini\"eren dus \'e\'en newton als de kracht die een massa van \'e\'en kilogram een versnelling van \'e\'en meter per seconde kwadraat geeft. Samen met de observatie dat de versnelling dezelfde richting en zin als de kracht heeft, krijgen we de tweede wet van Newton.
 	%%%\newline
-	\kader{
-	\vspace{3mm}
+	\begin{definition}
 	{\textbf{De tweede wet van Newton}}
 	%%%\newline
 	%%%\newline
@@ -38,7 +37,7 @@
 	\begin{eqnarray*}
 	\vec{F}=m\vec{a}
 	\end{eqnarray*}
-	\vspace{0mm}}
+	\end{definition}
 	
 	Dit is misschien een gemakkelijke formule maar in al haar eenvoud \emph{immens} krachtig. Het is een wetmatigheid die een relatie geeft tussen de oorzaak (de krachten) en het gevolg (de beweging, strikt genomen de versnelling). Deze wetmatigheid is het verklarende principe achter alle mechanische bewegingen. Als we de krachten kennen, kennen we de versnelling van het voorwerp en kunnen we (althans op zijn minst in theorie) de baan van het voorwerp bepalen.
 	
