--- a/lambregs_ximera/nwtn_derde_beginsel.tex
+++ b/lambregs_ximera/nwtn_derde_beginsel.tex
@@ -5,15 +5,10 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Het derde beginsel van Newtorn}{}
+	\xmtitle{Het derde beginsel van Newton}{}
     \xmsource
 
-
-
-
-
-
-	\section{Het derde beginsel van Newton}
+	% \section{Het derde beginsel van Newton}
 
 	Meestal plooien we onze vingers naar onze handpalm toe. De praktijk leert ons dat het andersom toch iets moeilijker gaat. Misschien vandaar. Als je echter met je andere hand wat helpt en duwt -- een kracht uitoefent -- plooien je vingers al iets verder naar achter. Uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Je moet concluderen dat naast het feit dat je een kracht op de tafel uitoefent\footnote{Misschien nu met weinig beweging tot gevolg.} de tafel op zijn beurt een kracht op je vingers uitoefent. Zonder extern inwerkende kracht zouden je vingers immers niet zo ver kunnen doorbuigen.
 	%\begin{image}
@@ -24,8 +19,7 @@
 	%\end{image}
 
 	\begin{image}
-	% \begin{wrapfigure}{R}{0.5\textwidth}
-	
+	% \begin{wrapfigure}{R}{0.5\textwidth}	
 	\includegraphics[width=0.44\textwidth]{Newtons_cradle_animation_book}
 	% \end{wrapfigure}
 	\end{image}
@@ -33,8 +27,7 @@
 
 	Een ander voorbeeld waarin lichamen krachten op mekaar uitoefenen is zo'n decoratief speeltje waar opgehangen metalen bolletjes op een fascinerende manier al botsend heen en weer slingeren. Een bolletje dat met een snelheid aangeslingerd komt, wordt tot stilstand gebracht terwijl een ander bolletje vanuit stilstand tot dezelfde snelheid wordt gelanceerd. Omdat de massa's van de kogeltjes even groot zijn en de versnelling van de ene even groot is als de vertraging van de andere, moeten de kogeltjes op elkaar even grote krachten uitoefenen. De derde wet van Newton -- ook wel de wet van actie en reactie genoemd -- \textit{poneert} dat de krachten die lichamen wederzijds uitoefenen \textit{altijd} even groot zijn.
 	%%%\newline
-	\kader{
-	\vspace{1mm}
+	\begin{definition}
 	{\textbf{De wet van actie en reactie}}
 	%%%\newline
 	%%%\newline
@@ -42,8 +35,7 @@
 	\begin{eqnarray*}
 	\vec{F}_{a,b}=-\vec{F}_{b,a}
 	\end{eqnarray*}
-	\vspace{0mm}
-	}
+	\end{definition}
 	
 	Met deze derde wet kunnen we verschillende verschijnselen verklaren. Zo is de wet van actie en reactie van toepassing op wandelen. Wij kunnen vanuit rust in beweging komen door ons af te zetten. Wij oefenen een kracht op de grond uit waarbij deze laatste op zijn beurt een even grote en tegengestelde kracht op ons uitoefent. Zo krijgen wij een versnelling. Een vliegtuig met straalmotoren of een raket doen hetzelfde. Door het uitoefenen van een kracht op de naar achter uitgeworpen gassen, oefenen de uitgeworpen gassen een kracht uit op het vliegtuig of de raket. Maar dan voorwaarts. (Een vliegtuig of raket duwt zich dus niet af tegen de (eventuele) lucht.)
 	
