--- a/lambregs_ximera/ae_constante_kracht.tex
+++ b/lambregs_ximera/ae_constante_kracht.tex
@@ -44,7 +44,7 @@
 	
 	De mechanische arbeid $W$, geleverd door een constante kracht $\vec{F}$, is gelijk aan het scalair product van de kracht met de verplaatsing:
 	\begin{eqnarray}
-	W&=&\vec{F}\cdot\Delta\vec{x}\label{def_arbeid_cste_kracht}
+	W&=&\vec{F}\cdot\Delta\vec{x}
 	\end{eqnarray}
 	
 	
