--- a/lambregs_ximera/ae_niet_constante_kracht.tex
+++ b/lambregs_ximera/ae_niet_constante_kracht.tex
@@ -47,7 +47,7 @@
 	Dit moet de volgende algemene definitie van arbeid legitimeren.
 	
 	\kader{De mechanische arbeid $W$, geleverd door een kracht $\vec{F}(x)$ gedurende de verplaatsing op een rechte van $x_a$ tot $x_b$ wordt gedefinieerd als
-	\begin{eqnarray}\label{W}
+	\begin{eqnarray}
 	W=\int_{x_a}^{x_b}F_x(x)\ dx
 	\end{eqnarray}
 	waarbij $F_x(x)$ de getalcomponent van $\vec{F}(x)$ is volgens de bewegingsrichting.}
@@ -59,7 +59,7 @@
 	\item[-]Arbeid kan negatief zijn. Dit is o.a. het geval wanneer kracht en verplaatsing een tegengestelde zin hebben.
 	\end{enumerate}
 	
-	\label{voorbeeld Hooke}
+	
 	\voorbeeld{Arbeid door een veer geleverd}{\textsf{Een eenvoudig maar duidelijk voorbeeld van een kracht die afhankelijk is van de plaats is de kracht door een veer uitgeoefend. Voor niet te grote uitwijkingen wordt deze gegeven door de wet van Hooke:}
 	\begin{eqnarray*}
 	F(x)=-kx
