--- a/lambregs_ximera/ae_pot_elastische.tex
+++ b/lambregs_ximera/ae_pot_elastische.tex
@@ -42,7 +42,7 @@
 	\end{eqnarray*}
 	De geleverde arbeid kan geschreven worden als het verschil van de uitdrukking $\frac{1}{2}kx^2$ ge\"evalueerd in begin- en eindpunt. De waarde van de uitdrukking neemt af met de hoeveelheid arbeid die is geleverd. We kunnen de uitdrukking dus interpreteren als de hoeveelheid energie die de veer op een bepaald punt, een bepaalde plaats, bezit. Dat wat immers verloren gaat aan energie -- de oorspronkelijke energie min de overblijvende energie -- moet door de veer worden geleverd als arbeid. We noemen de uitdrukking de \textit{elastiche potenti\"ele energie} van een veer:
 	\begin{eqnarray}
-	E_p&=&\frac{1}{2}kx^2\label{Ep=1/2kx^2}
+	E_p&=&\frac{1}{2}kx^2
 	\end{eqnarray}
 	De geleverde arbeid kunnen we vervolgens schrijven als
 	\begin{eqnarray*}
