--- a/lambregs_ximera/ae_pot_gravitationele.tex
+++ b/lambregs_ximera/ae_pot_gravitationele.tex
@@ -9,7 +9,7 @@
     \xmsource
 
 
-	\subsection{Gravitationele potenti\"ele energie}\label{gravitationele potentiele energie}
+	\subsection{Gravitationele potenti\"ele energie}
 
 	Beschouw een massa op een hoogte boven het aardoppervlak. Vanuit deze positie kan ze arbeid verrichten en zal ze dus potenti\"ele energie bezitten. Als we de massa bijvoorbeeld laten vallen kan ze op de grond een nagel inslaan en dus arbeid verrichten.
 	
@@ -23,7 +23,7 @@
 	\end{eqnarray*}
 	Hier voldoet de uitdrukking $mgx$ aan wat we verwachten van potenti\"ele ener\-gie. Het verschil van de uitdrukking ge\"evalueerd in het beginpunt en het eindpunt -- het verschil in energie -- is gelijk aan de hoeveelheid arbeid die tussen deze twee posities kan worden geleverd. We noemen de uitdrukking de \textit{gravitationele potenti\"ele energie}. En als we $x$ door $h$ vervangen, krijgen we de gekende vorm:
 	\begin{eqnarray}
-	E_p&=&mgh\label{Ep=mgh}
+	E_p&=&mgh
 	\end{eqnarray}
 	Net zoals bij de veerkracht geldt $W=-\Delta E_p$. 
 	
