--- a/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
+++ b/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
@@ -9,7 +9,7 @@
     \xmsource
 
 
-	\subsection{Gravitationele potenti\"ele energie, algemeen}\label{gravitationele potentiele energie alg}
+	\subsection{Gravitationele potenti\"ele energie, algemeen}
 
 	Beschouw een massa onderhevig aan de universele gravitatiekracht. We gaan opnieuw opzoek naar een potenti\"ele energiefunctie geassocieerd aan deze kracht.
 	\begin{image}
@@ -31,7 +31,7 @@
 	De potenti\"ele energie voor een massa $m'$ wordt bijgevolg geven
 	door
 	\begin{eqnarray}
-	E_p&=&-G\frac{mm'}{x}\label{Ep=-Gmm'/x}
+	E_p&=&-G\frac{mm'}{x}
 	\end{eqnarray}
 	
 \end{document}
