--- a/lambregs_ximera/ae_pot_potentiele_energie.tex
+++ b/lambregs_ximera/ae_pot_potentiele_energie.tex
@@ -32,7 +32,7 @@
 	
 	\kader{Indien er voor een plaatsafhankelijke kracht $F(x)$ een functie $U(x)$ bestaat
 	waarvoor de afgeleide op een minteken na de kracht is,
-	\begin{eqnarray}\label{U(x)}
+	\begin{eqnarray}
 	F(x)&=&-\frac{d}{dx}U(x)\nonumber
 	\end{eqnarray}
 	dan wordt $U(x)$ de \textit{potenti\"ele energie} genoemd.}
