--- a/lambregs_ximera/glvn_periodieke_golven.tex
+++ b/lambregs_ximera/glvn_periodieke_golven.tex
@@ -39,7 +39,7 @@
 	\end{tikzpicture}
 	
 	\end{image}
-	\captionof{figure}{\emph{De uitwijking van een golf in functie van de tijd op $t=0$ en een willekeurig tijdstip $t$}}\label{afleiding_golfvergelijking}
+	\captionof{figure}{\emph{De uitwijking van een golf in functie van de tijd op $t=0$ en een willekeurig tijdstip $t$}}
 	
 	De verschijningsvorm van de golf in de ruimte kunnen we op $t=0$ weergeven met volgende sinusfunctie:
 	\begin{eqnarray*}
@@ -58,11 +58,11 @@
 	\end{eqnarray*}
 	We hebben de uitwijking $y$ kunnen schrijven in functie van de variabelen $x$ en $t$. We hebben een algemene uitdrukking voor een rechtslopende golf:
 	\begin{eqnarray}
-	y(x,t)&=&A\sin\left(kx-\omega t\right)\label{rechtslopende_golf}
+	y(x,t)&=&A\sin\left(kx-\omega t\right)
 	\end{eqnarray}
 	Om de vergelijking voor een linkslopende golf te vinden, verschuiven we naar links in plaats van naar rechts of vervangen we $v$ door $-v$. We krijgen dan
 	\begin{eqnarray}
-	y(x,t)&=&A\sin\left(kx+\omega t\right)\label{linkslopende_golf}
+	y(x,t)&=&A\sin\left(kx+\omega t\right)
 	\end{eqnarray}
 	Deze functie in twee variabelen kunnen we iets beter verstaan wanneer we \'e\'en van de variabelen constant houden en de afhankelijkheid van de overblijvende variabele bekijken. Zo hebben we, wanneer we op een vaste plaats $x=x_0$ kijken, een harmonische trilling:
 	\begin{eqnarray*}
