--- a/lambregs_ximera/grvt_universele_gravitatiekracht.tex
+++ b/lambregs_ximera/grvt_universele_gravitatiekracht.tex
@@ -39,12 +39,12 @@
 	de verbindingslijn van de twee massa's en waarvan de grootte recht
 	evenredig is met het product van de twee massa's en omgekeerd
 	evenredig met het kwadraat van de afstand tussen beide:
-	\begin{eqnarray}\label{universele gravitatiekracht}
+	\begin{eqnarray}
 	F&=&G\frac{mm'}{r^2}
 	\end{eqnarray}
 	De evenredigheidsco\"effici\"ent $G$ wordt de
 	\textit{gravitatieconstante} genoemd.
-	\begin{eqnarray}\label{gravitatieconstante}\nonumber
+	\begin{eqnarray}\nonumber
 	G&=&6,67\cdot10^{-11}\rm\,\frac{Nm^2}{kg^2}
 	\end{eqnarray}
 	\end{minipage}}
