--- a/lambregs_ximera/hrmn_harmonische_oscillator.tex
+++ b/lambregs_ximera/hrmn_harmonische_oscillator.tex
@@ -42,7 +42,7 @@
 	&\Downarrow&\nonumber\\
 	-kx&=&m\frac{d^2x}{dt^2}\nonumber\\
 	&\Updownarrow&\nonumber\\
-	\frac{d^2x}{dt^2}+\frac{k}{m}x&=&0\label{diffvgl_ht}
+	\frac{d^2x}{dt^2}+\frac{k}{m}x&=&0
 	\end{eqnarray}
 	\ldots\,en toen kwamen we uit bij een \ldots\,\emph{differentiaalvergelijking}. Om meer precies te zijn: een tweede-orde lineaire differentiaalvergelijking met constante co\"effici\"enten. Dat klinkt redelijk ingewikkeld. In feite is het ook niet zo simpel. We zijn opzoek naar de beweging, wat betekent dat we de positie $x$ in functie van de tijd willen vinden -- de functie $x(t)$ dus. De vergelijking die we gevonden hebben is niet zozeer een algebra\"ische vergelijking in een onbekende variabele $x$ (zoals bijvoorbeeld een tweedegraadsvergelijking) dan wel \emph{een vergelijking voor een functie}!\footnote{Wanneer we de impliciete afhankelijkheid van de tijd expliciet aangeven,ziet de vergelijking er als volgt uit
 	\begin{eqnarray*}
@@ -71,7 +71,7 @@
 	\begin{eqnarray}
 	\frac{d^2x}{dt^2}+\frac{k}{m}x&=&0\nonumber\\
 	&\Updownarrow&\nonumber\\
-	x(t)=A\sin(\omega t+\varphi)\quad&\mathrm{met}&\quad\omega=\sqrt{\frac{k}{m}}\label{opl_diffvgl_ht}
+	x(t)=A\sin(\omega t+\varphi)\quad&\mathrm{met}&\quad\omega=\sqrt{\frac{k}{m}}
 	\end{eqnarray}
 	We hebben nu de wiskundige oplossing van de differentiaalvergelijking gevonden. De massa trilt sinuso\"idaal in de tijd. Vandaar dat we over een harmonische trilling spreken.
 	
@@ -114,7 +114,7 @@
 		\includegraphics[width=.9\textwidth]{trillendeveer_b}
 		\includegraphics[width=.9\textwidth]{trillendeveer_c}
 		\includegraphics[width=.9\textwidth]{trillendeveer_d}
-		\label{beginposbeginfase}
+		
 	\end{image}
 	\captionof{figure}{Relatie tussen beginpositie en beginfase}
 	
