--- a/lambregs_ximera/hrmn_resonantie.tex
+++ b/lambregs_ximera/hrmn_resonantie.tex
@@ -22,7 +22,7 @@
 	\Downarrow\nonumber\\
 	-kx-cv+F_0\cos\omega t=ma\nonumber\\
 	\Updownarrow\nonumber\\
-	x''+\gamma x'+\omega_0^2x=\frac{F_0}{m}\cos\omega t\label{diffvgl_resonantie}
+	x''+\gamma x'+\omega_0^2x=\frac{F_0}{m}\cos\omega t
 	\end{gather}
 	Waarin we $c/m$ hebben vervangen door een nieuw symbool $\gamma=c/m$ en ook $\omega_0$ hebben gebruikt voor $\sqrt{k/m}$. $\omega_0=\sqrt{k/m}$ is de natuurlijke pulsatie; de frequentie (op $2\pi$ na) waarmee de massa zou trillen, moest ze vrij worden gelaten.
 	
