--- a/lambregs_ximera/knmtc_1dim_EVRB.tex
+++ b/lambregs_ximera/knmtc_1dim_EVRB.tex
@@ -18,11 +18,11 @@
 	
 	Dat de positie in functie van de tijd een tweedegraadsveeltermfunctie is, geeft in symbolen:\footnote{we gebruiken de constanten $p$, $q$ en $r$ i.p.v. $a$, $b$ en $c$ om verwarring met de betekenis van $a$ te voorkomen.}
 	\begin{eqnarray}
-	x(t)=pt^2+qt+r\label{pqr}
+	x(t)=pt^2+qt+r
 	\end{eqnarray}
 	Nu willen we de constanten $p$, $q$ en $r$ fysisch kunnen duiden en eventueel andere symbolen geven, zodat hun betekenis sneller af te lezen is. Dat doen we door te eisen dat de afgeleide met de snelheid overeenkomt en de tweede afgeleide met de versnelling. Ook gebruiken we de beginvoorwaarden. Dus:
 	\begin{align}
-	v(t)&=\frac{dx}{dt}=2pt+q\label{2pq}\\
+	v(t)&=\frac{dx}{dt}=2pt+q\\
 	a(t)&=\frac{d^2x}{dt^2}=2p\nonumber
 	\end{align}
 	Omdat de versnelling constant is, halen we uit de laatste regel dat $a(t)=a=2p\Leftrightarrow p=\frac{a}{2}$. Als we met $v_0$ de snelheid op tijdstip $t=0$ voorstellen ($v_0=v(0)$) en $t=0$ invullen in (\ref{2pq}), dan vinden we dat $q=v_0$. De constante $q$ stelt dus de beginsnelheid voor. Als we vervolgens met $x_0$ de positie op tijdstip $t=0$ voorstellen en $t=0$ invullen in (\ref{pqr}), dan vinden we dat $r=x_0$. De constante $r$ stelt dus de beginpositie voor.
@@ -34,8 +34,8 @@
 	\vspace{1ex}
 	De plaatsfunctie $x(t)$ en de snelheidsfunctie $v(t)$ van een EVRB met versnelling $a$ worden gegeven door:
 	\begin{eqnarray}
-	x(t)&=&x_0+v_0t+\frac{1}{2}at^2\label{x(t)0}\\
-	v(t)&=&v_0+at\label{v(t)0}
+	x(t)&=&x_0+v_0t+\frac{1}{2}at^2\\
+	v(t)&=&v_0+at
 	\end{eqnarray}
 	Hierin is $x_0$ de \textit{beginpositie} en $v_0$ de \textit{beginsnelheid}. Ze worden bepaald door de \textit{beginvoorwaarden} of \textit{randvoorwaarden}.
 	\vspace{1ex}
@@ -44,8 +44,8 @@
 	
 	Indien we de beschrijving van de beweging niet op $t=0$ willen laten starten maar op een gegeven tijdstip $t_0$, dan moeten we in de beschrijving $t$ vervangen door $\Delta t= t-t_0$, de verstreken tijd vanaf het begintijdstip $t_0$. De functies (\ref{x(t)0}) en (\ref{v(t)0}) worden dan een klein beetje ingewikkelder:
 	\begin{eqnarray}
-	x(t)&=&x_0+v_0(t-t_0)+\frac{1}{2}a(t-t_0)^2\label{x(t)}\\
-	v(t)&=&v_0+a(t-t_0)\label{v(t)}
+	x(t)&=&x_0+v_0(t-t_0)+\frac{1}{2}a(t-t_0)^2\\
+	v(t)&=&v_0+a(t-t_0)
 	\end{eqnarray}
 	
 	Met de functies (\ref{x(t)}) en (\ref{v(t)}) kunnen we de volgende formule voor de gemiddelde snelheid van een EVRB aantonen:%\footnote{Het formuletje is handig te gebruiken in veel vraagstukken door gebruik te maken van $\Delta x=\overline{v}\Delta t$.} 
