--- a/lambregs_ximera/knmtc_1dim_begrippen.tex
+++ b/lambregs_ximera/knmtc_1dim_begrippen.tex
@@ -32,7 +32,7 @@
 	\hfill
 	\includegraphics[width=0.45\textwidth]{Serway2p1(2)}
 	\hfill
-	\label{grafplaatsfunctie}
+	
 	\end{image}
 	\captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
 	
@@ -69,7 +69,7 @@
 	
 	\includegraphics[width=0.8\textwidth]{stuiterendetennisbal}
 	\end{image}
-	\captionof{figure}{Stuiterende tennisbal}\label{stuiterendetennisbal}
+	\captionof{figure}{Stuiterende tennisbal}
 	
 	Hoe lossen we dit probleem nu op? Als we naar de stroboscopische foto (\ref{stuiterendetennisbal}) van de stuiterende tennisbal kij\-ken, zien we dat de bal bovenaan trager beweegt dan wanneer hij de grond nadert. Bovenaan liggen de beelden immers dichter bij elkaar zodat de tennisbal minder afstand aflegt in de tijdsspanne tussen twee opeenvolgende opnames. 
 	De kwantitatieve\footnote{Kwantitatief wil zeggen dat het over een hoeveelheid of een grootte gaat.} informatie die we op deze manier uit de beelden kunnen destilleren, levert ons echter opnieuw gemiddelde snelheid en niet zomaar de ogenblikkelijke snelheid. De tennisbal verandert immers nog van snelheid tussen twee opeenvolgende opnames. Door nu echter de frequentie\footnote{Frequentie is een grootheid die aangeeft hoeveel cyclussen er per seconde worden doorlopen. Hier gaat het dus over het aantal beelden dat per seconde wordt gemaakt. De eenheid van frequentie is $\rm\,s^{-1}$ oftewel Hz (de Hertz).} waarmee de foto's worden genomen op te drijven, krijgen we een accurater beeld van de snelheid die de tennisbal op een gegeven moment heeft. De tijdsintervallen zijn nu immers korter zodat de bal minder van snelheid kan veranderen gedurende de intervallen en zodoende de gemiddelde snelheid een indicatie wordt van de ogenblikkelijke snelheid. De ogenblikkelijke snelheid wordt dus beter en beter benaderd door het tijdsinterval kleiner en kleiner en kleiner en kleiner\ldots te nemen. Echter, hoe kort het tijdsinterval ook is, de snelheid zal veranderen gedurende dat hele kleine tijdsinterval. Daarom, je raadde het misschien al lang, defini\"eren we de ogenblikkelijke snelheid als de \emph{limiet} van de gemiddelde snelheid over een tijdsinterval waarbij we dat interval naar nul laten gaan. Of m.a.w. wordt de ogenblikkelijke snelheid gedefinieerd \footnote{Dat betekent dus dat als iemand je vraagt wat snelheid is, je moet antwoorden dat het de afgeleide\ldots} als de afgeleide\footnote{De afgeleide is in deze context van het zoeken naar snelheid door Isaak Newton (1643-1727) en Gottfried Wilhelm von Leibniz (1646-1716) onafhankelijk van elkaar ontwikkeld.} van de plaatsfunctie:
