--- a/lambregs_ximera/nwtn_oplossingsstrategie.tex
+++ b/lambregs_ximera/nwtn_oplossingsstrategie.tex
@@ -52,13 +52,13 @@
 	\begin{eqnarray}
 	F_s-m_1g&=&m_1a\nonumber\\
 	&\Updownarrow&\nonumber\\
-	F_s&=&m_1(a+g)\label{T1}
+	F_s&=&m_1(a+g)
 	\end{eqnarray}
 	De tweede wet van Newton toepassen op $m_2$, met $F_z=mg$, levert
 	\begin{eqnarray}
 	F_{z,x}-F_s&=&m_2a\nonumber\\
 	&\Updownarrow&\nonumber\\
-	F_s&=&m_2(g\sin{\varphi}-a)\label{T2}
+	F_s&=&m_2(g\sin{\varphi}-a)
 	\end{eqnarray}
 	Uit (\ref{T1}) en (\ref{T2}) volgt
 	\begin{eqnarray}
